# rust-friendlyid

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.rpm/: friendlyid.spec
src/: Url62.rs  UuidConverter.rs  base62.rs  friendly_id.rs  main.rs
