[package]
name = "friendlyid"
version = "0.3.0"
authors = ["Mariusz Smykuła <mariusz@devskiller.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The FriendlyID tool that converts a given UUID to a URL-friendly ID which is based on Base62"
repository = "https://github.com/mariuszs/rust-friendlyid"
homepage = "https://github.com/Devskiller/friendly-id"
keywords = ["uuid", "base62", "url62", "converter", "shortener"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
friendly_id = "0.3.0"
clap = "2.33.3"

[package.metadata.rpm]
package = "friendlyid"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
friendlyid = { path = "/usr/bin/friendlyid" }
