[package]
name = "friendlyid"
version = "0.4.0"
authors = ["Mariusz Smykuła <mariusz@devskiller.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The FriendlyID tool that converts a given UUID to a URL-friendly ID which is based on Base62"
repository = "https://github.com/mariuszs/rust-friendlyid"
homepage = "https://github.com/Devskiller/friendly-id"
keywords = ["uuid", "base62", "url62", "converter", "shortener"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
uuid = "1"
friendly_id = "0.4.0"
clap = { version = "4", features = ["derive"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/friendlyid", dest = "/usr/bin/friendlyid", mode = "755" },
]
